--- a/Hoofdstukken/ontwerp/detail.tex
+++ b/Hoofdstukken/ontwerp/detail.tex
@@ -2,5 +2,7 @@
 
 \input{./Hoofdstukken/ontwerp/detail/architectuur.tex}
 \input{./Hoofdstukken/ontwerp/detail/externelibraries.tex}
+\input{./Hoofdstukken/ontwerp/detail/module.tex}
+\input{./Hoofdstukken/ontwerp/detail/client.tex}
 \input{./Hoofdstukken/ontwerp/detail/problemen.tex}
 \input{./Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex}
