TODOs toegevoegd ontwerp

--- a/Hoofdstukken/evaluatie.tex
+++ b/Hoofdstukken/evaluatie.tex
@@ -2,3 +2,7 @@
 \section{Sectie}
 \subsection{Subsectie}
 Tekst in subsectie.
+
+
+-TODO: Onderdeel over analyse van geheugengebruik schrijven
+-TODO: Performance analyse van JavaScript onderdeel schrijven
