--- a/Hoofdstukken/ontwerp/detail/client.tex
+++ b/Hoofdstukken/ontwerp/detail/client.tex
@@ -11,7 +11,8 @@ Het voornaamste onderdeel van de client is het canvas-element waarin de output g
 \paragraph{Acties}
 De programmeur kan een aantal specifieke acties uitvoeren op de client. De state van deze acties wordt onderhouden door de client zelf. 
 
-
+-TODO: Acties verder uitwerken vanuit de client gezien
+-TODO: Toelichten van de keuze voor Fullwindow
 
 \paragraph{Debug Console}
 Voor de programmeur die gebruik gaat maken van de Canvas.hs library is het belangrijk dat zijn interface er zo uit ziet zoals hij dit wil. Ongetwijfeld zal een programmeur tegen problemen aanlopen bij het bouwen van de interface die hij niet had voorzien bij het schrijven van zijn code. Om probleemoplossing hiervan te vergemakkelijken bevat Canvas.hs een debug console bevat waar het aanroepen van teken functies en de invloed van deze API aanroepen goed visueel en tekstueel inzichtelijk worden. Doormiddel van een actie vanuit het programma van de gebruiker kan de debug console tevoorschijn gehaald worden.
