--- a/Hoofdstukken/ontwerp/globaal.tex
+++ b/Hoofdstukken/ontwerp/globaal.tex
@@ -1,2 +1,7 @@
 \section{Globaal ontwerp}  \label{sec:globaal}
 Canvas.hs is een library die de programmeur kan importeren in zijn programma om er daarna met de API die Canvas.hs aanbiedt gemakkelijk een uitgebreide user interface mee te bouwen. Canvas.hs focust zich op elementaire input en geen ondersteuning hebben voor high level interface elementen zoals buttons en textarea's. Deze elementen zouden met behulp van Canvas.hs wel eenvoudig te implementeren moeten zijn.
+
+-TODO: Overzicht geven van de architectuur
+-TODO: Belangrijkste ontwerpkeuzes
+-TODO: Concreet beeld geven van de output (voorbeeld)
+-TODO: Gebruik plaatje architectuur in detail en vervangen plaatje detail?
