--- a/Hoofdstukken/ontwerp/detail/module.tex
+++ b/Hoofdstukken/ontwerp/detail/module.tex
@@ -1,8 +1,6 @@
 \subsection{Module}
 De module is de Haskell bibliotheek die de programmeur gebruikt om de grafische interface in de client te bedienen. Naar de programmeur is de gebruiksvriendelijkheid van de biblotheek een van de belangrijkste overwegingen voor het ontwerp. De module bestaat uit een aantal onderdelen: de server die de statische bestanden serveert, de websocket server die de verbinding met de client onderhoud, en de laag die de input en output verwerkt. \autoref{fig:architecture_module} geeft de architectuur weer van de module.
 
--TODO: Ontwerpkeuze toelichten: unsafePerformIO in Server.hs
-
 \begin{figure}
 \begin{center}
 \includegraphics[keepaspectratio,width=\textwidth]{./images/module_architecture.pdf}
@@ -30,6 +28,11 @@ De server draait in het process wat gestart wordt vanuit de Haskell-code van de 
 
 \paragraph{Input/output}
 De module handeld input en output af door events naar de eventhandler van de programmeur te sturen. Bijvoorbeeld: wanneer een gebruiker op een rondje klikt zal het programma de event handler aanroepen met de ID van dat rondje en de lokatie van de muisklik. De event handler van de programmeur kan dan nieuwe output genereren op basis van dit event. Zoals een nieuw menu weergeven of het uitvoeren van een actie zoals het opvragen van een bestand van de gebruiker.In \autoref{fig:startup_procedure} is deze interactie weergegeven. 
+
+-TODO: Hoe werkt de I/O
+-TODO: Primitieven (referentie naar grafische bibliotheek)
+-TODO: Acties
+-TODO: Timers in de module en niet naar de client
 
 \paragraph{Unsafe I/O}
 In Server.hs wordt gebruik gemaakt van unsafePreformIO voor het starten van child processen (een MVar die threads bijhoudt) en om een verbinding met een client bij te houden (een IORef die de connections naar de clients bevat). Hoewel het in dit geval volkomen veilig is, zijn er bezwaren tegen het gebruik van unsafePerformIO\cite{Haskell.org2008}. Dit is namelijk niet de netste oplossing en kan meestal voorkomen worden. Het is netter om een Server Monad te gebruiken die een State implementeert die deze zaken bijhoudt. Echter is het implementeren daarvan tijdsintensief, waardoor voor deze oplossing is gekozen.
