Update stukje over input en output

--- a/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
+++ b/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
@@ -1,1 +1,3 @@
-\subsection{Grafische bibliotheek}
+\subsection{Grafische bibliotheek} \label{subsec:grafische_bibliotheek}
+
+-TODO: Ontwerpkeuze: Referentie van specifieke elementen met behulp van ID toelichten
