--- a/Hoofdstukken/ontwerp/detail/module.tex
+++ b/Hoofdstukken/ontwerp/detail/module.tex
@@ -27,12 +27,14 @@ De server draait in het process wat gestart wordt vanuit de Haskell-code van de 
 \end{figure}
 
 \paragraph{Input/output}
-De module handeld input en output af door events naar de eventhandler van de programmeur te sturen. Bijvoorbeeld: wanneer een gebruiker op een rondje klikt zal het programma de event handler aanroepen met de ID van dat rondje en de lokatie van de muisklik. De event handler van de programmeur kan dan nieuwe output genereren op basis van dit event. Zoals een nieuw menu weergeven of het uitvoeren van een actie zoals het opvragen van een bestand van de gebruiker.In \autoref{fig:startup_procedure} is deze interactie weergegeven. 
+De module handeld input en output af door events naar de eventhandler van de programmeur te sturen. Bijvoorbeeld: wanneer een gebruiker op een rondje klikt zal het programma de event handler aanroepen met de ID van dat rondje en de lokatie van de muisklik. De event handler van de programmeur kan dan nieuwe output genereren op basis van dit event. Zoals een nieuw menu weergeven of het uitvoeren van een actie zoals het opvragen van een bestand van de gebruiker.In \autoref{fig:startup_procedure} is deze interactie weergegeven.
 
--TODO: Hoe werkt de I/O
--TODO: Primitieven (referentie naar grafische bibliotheek)
--TODO: Acties
--TODO: Timers in de module en niet naar de client
+De programmeur zal in zijn eventhandler bij ieder event de huidige state en de huidige event meekrijgen. Het type van de eventhandler van de programmeur is \inlinecode{userState -> Event -> (userState, Shape)}, waarin de userState elk type kan hebben. Door middel van pattern matching kan de programmeur makkelijk een bepaald event opvangen. Een muisklik event wordt opgevangen door: \inlinecode{handler state (MouseClick (x,y) "id")}. De ondersteunde events en outputtypes worden verder toegelicht in \autoref{subsec:grafische_bibliotheek}.
+
+-TODO: Hoe werkt de I/O  
+-TODO: Acties   
+\paragraph{Timers}
+Canvas.Hs ondersteund timers die ervoor zorgen dat met een bepaald interval een event naar de eventhandler wordt verstuurd. Hiermee kunnen bijvoorbeeld animaties worden toegevoegd aan de interface. Deze timers worden bijgehouden in de module. Een alternatief is om de timers aan de client over te laten. Dit heeft als voordeel dat het makkelijker is om timers bij de houden in JavaScript dan in Haskell. In Haskell ontstaan er dan verschillende threads die je moet bijhouden. Groot voordeel is dat er geen extra acties over de WebSocketconnectie verzonden hoeven worden en dat een implementatie direct in Haskell meer precisie geeft voor de timer.
 
 \paragraph{Unsafe I/O}
 In Server.hs wordt gebruik gemaakt van unsafePreformIO voor het starten van child processen (een MVar die threads bijhoudt) en om een verbinding met een client bij te houden (een IORef die de connections naar de clients bevat). Hoewel het in dit geval volkomen veilig is, zijn er bezwaren tegen het gebruik van unsafePerformIO\cite{Haskell.org2008}. Dit is namelijk niet de netste oplossing en kan meestal voorkomen worden. Het is netter om een Server Monad te gebruiken die een State implementeert die deze zaken bijhoudt. Echter is het implementeren daarvan tijdsintensief, waardoor voor deze oplossing is gekozen.
