--- a/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
+++ b/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
@@ -1,3 +1,9 @@
 \subsection{Grafische bibliotheek} \label{subsec:grafische_bibliotheek}
 
+-TODO: Ontwerpkeuze: Boomstructuur en modifiers vs attributen op een element
 -TODO: Ontwerpkeuze: Referentie van specifieke elementen met behulp van ID toelichten
+-TODO: Ontwerpkeuze: Default values
+-TODO: Ontwerpkeuze: Hulpfuncties zoals shape
+-TODO: Ontwerpkeuze: Toelichten acties
+-TODO: Ontwerpkeuze: Toelichten van de keuze voor Fullwindow (Ik weet niet precies waarvoor dit is? Staat bij Robert zijn document) https://drive.google.com/#folders/0B97Qa5VgdaDNWjBiOGFEa3JMZHc
+-TODO: Toelichten waarom we blocking actions hebben
