--- a/Hoofdstukken/ontwerp/globaal.tex
+++ b/Hoofdstukken/ontwerp/globaal.tex
@@ -5,3 +5,4 @@ Canvas.hs is een library die de programmeur kan importeren in zijn programma om 
 -TODO: Belangrijkste ontwerpkeuzes
 -TODO: Concreet beeld geven van de output (voorbeeld)
 -TODO: Gebruik plaatje architectuur in detail en vervangen plaatje detail?
+-TODO: Plaatje van de Client
