Plaatjes en globaal ontwerp geupdate

--- a/Hoofdstukken/ontwerp/detail/architectuur.tex
+++ b/Hoofdstukken/ontwerp/detail/architectuur.tex
@@ -1,11 +1,11 @@
 \subsection{Architectuur}
-De architectuur van een applicatie die Canvas.hs gebruikt bestaat uit drie componenten. De applicatie van de gebruiker, de Canvas.hs module en de JavaScript Canvas.hs applicatie. De Canvas.hs module bied functies aan die de programmeur kan gebruiken om te tekenen en bepaalde acties uit te voeren in de browser. De module draait een server om te communiceren met de browseromgeving. De browseromgeving verbind doormiddel van websockets met de server en geeft de output van het programma weer in een canvas HTML-element. In \autoref{fig:overzicht_architectuur} is een schematische weergave van de architectuur weergegeven.
+De architectuur van een applicatie die Canvas.hs gebruikt bestaat uit drie componenten. De applicatie van de gebruiker, de Canvas.hs module en de JavaScript Canvas.hs applicatie. De Canvas.hs module bied functies aan die de programmeur kan gebruiken om te tekenen en bepaalde acties uit te voeren in de browser. De module draait een server om te communiceren met de browseromgeving. De browseromgeving verbind doormiddel van websockets met de server en geeft de output van het programma weer in een canvas HTML-element. In \autoref{fig:architectuur} is een schematische weergave van de architectuur weergegeven.
 
 \begin{figure}
 \begin{center}
-\includegraphics[keepaspectratio,width=\textwidth]{./images/architectuur_overzicht.pdf}
-\caption{Overzicht van de architectuur van Canvas.hs}
-\label{fig:overzicht_architectuur}
+\includegraphics[keepaspectratio,width=\textwidth]{./images/architecture.pdf}
+\caption{Architectuur van Canvas.hs}
+\label{fig:architectuur}
 \end{center}
 \end{figure}
 
