--- a/Hoofdstukken/ontwerp/requirements.tex
+++ b/Hoofdstukken/ontwerp/requirements.tex
@@ -5,6 +5,8 @@ Het systeem bestaat uit een browseromgeving dat doormiddel van html en JavaScrip
 
 Initieel is een lijst met requirements opgesteld. Gedurende het ontwikkelproces zijn bij de meetings met de begeleider nieuwe requirements aan de orde gekomen deze requirements zijn in deze lijst opgenomen.
 
+-TODO: Uitbreiden requirements
+
 \subsubsection{Functionele requirements}
 \begin{enumerate}[{R}1]
 	\item Het systeem dient grafische primitieven zoals cirkels, vierkanten, lijnen, Bézier curves, n-hoeken en tekst moeten op een simpele manier getekend kunnen worden vanuit het Haskell-programma van de student.
