Globaal ontwerp gefixt

--- a/Hoofdstukken/ontwerp/globaal.tex
+++ b/Hoofdstukken/ontwerp/globaal.tex
@@ -1,7 +1,20 @@
 \section{Globaal ontwerp}  \label{sec:globaal}
-Canvas.hs is een library die de programmeur kan importeren in zijn programma om er daarna met de API die Canvas.hs aanbiedt gemakkelijk een uitgebreide user interface mee te bouwen. Canvas.hs focust zich op elementaire input en geen ondersteuning hebben voor high level interface elementen zoals buttons en textarea's. Deze elementen zouden met behulp van Canvas.hs wel eenvoudig te implementeren moeten zijn.
+Canvas.hs is een library die de programmeur kan importeren in zijn programma om er daarna met de API die Canvas.hs aanbiedt gemakkelijk een uitgebreide user interface mee te bouwen. Canvas.hs focust zich op elementaire input en geen ondersteuning hebben voor high level interface elementen zoals buttons en textarea's. Deze elementen zouden met behulp van Canvas.hs wel eenvoudig te implementeren moeten zijn. \autoref{fig:demo_screenshot} geeft een demoapplicatie van Canvas.hs weer.
+
+
+\begin{figure}
+\begin{center}
+\includegraphics[keepaspectratio,width=\textwidth]{./images/demo.png}
+\caption{Een demoapplicatie van de Canvas.hs library}
+\label{fig:demo_screenshot}
+\end{center}
+\end{figure}
+
 
 \autoref{fig:overzicht_architectuur} geeft een overzicht van de architectuur. Canvas.hs bestaat uit een module en een client. De module is een library die de programmeur in zijn programma include. Bij het starten van de module start een HttpServer, een WebSocket-server en wordt de webpagina van de client automatisch gestart. De client bestaat uit een browserpagina met onder andere een canvas element. De module communiceert met de client via een WebSocket verbinding om grafische elementen op de canvas in de client te tekenen.
+
+
+Canvas.hs roept de eventhandler van de gebruiker aan met alle events die er in de grafische interface gebeuren. De eventhandler krijgt het event en de huidige state variabele als parameters mee en moet daarop de nieuwe state variabele en output teruggeven. Output bestaat uit acties die op de client uitgevoerd kunnen worden (zoals een promt, fullscreen of download) en grafische output in de vorm van shapes.
 
 \begin{figure}
 \begin{center}
@@ -10,8 +23,3 @@ Canvas.hs is een library die de programmeur kan importeren in zijn programma om 
 \label{fig:overzicht_architectuur}
 \end{center}
 \end{figure}
-
--TODO: Overzicht geven van de architectuur
--TODO: Belangrijkste ontwerpkeuzes
--TODO: Concreet beeld geven van de output (voorbeeld)
--TODO: Plaatje van de Client
