--- a/Hoofdstukken/ontwerp/testresultaten.tex
+++ b/Hoofdstukken/ontwerp/testresultaten.tex
@@ -1,5 +1,8 @@
 \section{Testresultaten} \label{sec:testresultaten}
 
+-TODO: Onderdeel over analyse van geheugengebruik schrijven
+-TODO: Performance analyse van JavaScript onderdeel schrijven
+
 Door de gebruik van voornamelijk twee verschillende programmeertalen zijn de tests voor deze toepassingen ook apart geschreven. Alle tests kunnen gezamelijk via cabal test aangeroepen worden. Dit vereist wel enige configuratie. Uitgebreide uitleg over het uitvoeren en ontwikkelen van tests is te vinden op de website van Canvas.hs: http://canvashs.github.io/test.html
 
 \subsection{JavaScript}
