--- a/Hoofdstukken/evaluatie.tex
+++ b/Hoofdstukken/evaluatie.tex
@@ -1,12 +1,8 @@
 \chapter{Evaluatie} \label{hoofdstuk:evaluatie}
-\section{Sectie}
-\subsection{Subsectie}
-Tekst in subsectie.
 
-
-
--TODO: Onderdeel over analyse van geheugengebruik schrijven
--TODO: Performance analyse van JavaScript onderdeel schrijven
+\section{Problemen, Verbeteringen en aanbevelingen}
+\subsection{Delta updates (met animaties)}
+\subsection{IO Monad afsplitsen}
 
 {\color{red} Onderstaande had ik (Pim) orgineel geschreven voor het problemenstuk, he tmoet nog aangevuld/afgemaakt worden e.d., maar dat is iets wat bij evaluatie kan. Het is over de problemen die we hadden omdat we relatief weinig haskell-kennis hadden}
 
@@ -14,10 +10,69 @@ Tekst in subsectie.
 Bij het begin van het Canvas.Hs-project was de kennis over Haskell en functioneel programmeren in het algemeen beperkt tot de kennis opgedaan met het vak Functioneel programmeren. Hoewel dit een solide basis vormt is het doel van Canvas.Hs juist om een aantal concepten die niet binnen dit vak passen af te schermen van de studenten. Dit betekende dat er bij het project van deze concepten gebruik moest worden gemaakt en wij ons deze ook eigen hebben moeten maken. Zoals altijd bij het leren van nieuwe concepten leverde dit af en toe code die niet optimaal gebruik maakte van de mogelijkheden van deze concepten en kinderziektes op. 
 
 Naarmate het project vorderde vorderde ook onze kennis van Haskell, hierdoor maakt de uiteindelijke versie van Canvas.Hs goed gebruik van de mogelijkheden van o.a. monadisch programmeren en Haskells threadysteem. 
-
 \paragraph{Monads}
 Zoals gezegd kent Haskell het concept van monads. Één van de doelen van CanvasHs is om dit concept niet te hoeven gebruiken voor grafische weergave bij het vak functioneel programmeren. Dit betekent dat ook wij, de ontwikkelaars, weinig kennis over dit concept hadden voor aan het project begonnen werd. Doordat we 
 Denk aan do-notatie, binds (>>= / >>) en eigen monad voor de Server (state)
 
 \paragraph{Threads}
 Denk aan geziek met netjes de websockets en http-threads afsluiten en Timer-threads die nu doorlopen
+\section{Planning}
+\section{Samenwerking}
+Voor dit project zullen we op een AGILE manier werken, daarnaast zullen we gebruik maken van tools om ons ontwikkelproces beter te integreren. Hiertoe zullen we eerst scrum bespreken, en vervolgens bekijken welke tooling gebruikt gaan worden voor dit project.
+
+Tijdens de ontwikkelen van Canvas.hs zal er gebruik worden gemaakt van verschillende zogenaamde agile development methoden—waaronder de scrum project management methode. Naast projectmanagement bestaan er methoden die de productiviteit en effectiviteit van ontwikkelwerk verhoogt. Er zal gebruikt gemaakt worden van: automatisch testen en continuous integration.
+
+\subsection{Algemeen}
+\subsection{Project organisatie}
+\paragraph{Toepassing Scrum (Trello)}
+Scrum is een softwareontwikkelmethode die helpt bij het organiseren, plannen en bijhouden van alle taken omtrent softwareontwikkeling. Scrum kent veel aspecten en kan op zeer verschillende wijze worden toegepast. In de paragrafen hieronder wordt kort toegelicht hoe scrum toegepast zal worden binnen het project.
+\paragraph{Taken}
+Binnen scrum kan je afzonderlijke taken op verschillende manieren definiëren. Er zal geprobeerd worden zo veel mogelijk te werken met user stories. In een user story wordt een bepaalde actie van een gebruiker beschreven. De software die er voor moet zorgen dat deze actie mogelijk wordt dient dan nog geschreven te worden. Zodra deze software geschreven is, getest is en eventueel gepubliceerd is kan de user story als voltooid worden beschouwd.
+
+Niet alle taken kunnen middels een user story beschreven worden, in dat geval zullen wij hiervan afwijken.
+\paragraph{Project Backlog}
+Het project backlog is de ongesorteerde verzameling uit te voeren taken. Zodra het duidelijk wordt dat er een nieuwe taak te vervullen is, zal deze in eerste instantie in de project backlog geplaatst worden. Later zullen deze taken ingepland worden in sprints.
+
+\paragraph{Sprints}
+Een sprint is een periode waarbinnen een subset van taken uit de project backlog wordt uitgevoerd. Deze subset van taken heet het sprint backlog.
+
+Voordat een sprint van start gaat zal er een sprint bespreking gehouden worden. Hierin wordt het sprint backlog van de komende sprint gevuld. Voor elke taak zal worden gekeken hoeveel tijd deze in beslag neemt. Vervolgens is het eenvoudig geworden om met goede zekerheid een sprint in te vullen met taken die haalbaar zijn. Daarnaast worden de resultaten van de vorige sprint geevalueerd. Deze bespreking zal veel uitgebreider zijn dan de scrum bespreking.
+
+Nadat er met een sprint is begonnen mogen er geen taken meer toegevoegd worden aan de sprint backlog. Een sprint duurt twee weken, hierdoor voeren we het project uit in negen sprints.
+
+\paragraph{Scrum master} 
+Er is een persoon die goed in de gaten zal houden of alles binnen een sprint en over sprints heen volgens de planning verloopt. En zonodig de planning aanpast. Deze persoon wordt binnen de scrum project management methode de scrum master genoemd. Binnen het Canvas.hs team zal Joost van Doorn deze taak vervullen.
+
+Een belangrijk instrument van de scrum master is de zogenaamde burndown chart dit is een grafiek die op elk moment de voortgang van de huidige sprint toont. Idealiter is deze grafiek bij elke scrum bespreking up to date, en wordt deze dan ook getoond aan de team leden.
+
+\paragraph{Product owner} 
+Naast de rol van scrum master is de rol van product owner ook een belangrijke. We nemen aan dat Robert de Groote deze rol zal invullen. De product owner is vaak de klant en de persoon die beslist over het uiteindelijke product. De inspraak van de product owner zal er voor moeten zorgen dat het doel van het product wordt nagestreefd. Hierbee is het handig dat de product owner aanwezig is bij elke sprint bespreking, zodat de taken in het sprint backlog in lijn liggen met de prioriteiten van de product owner.
+
+\paragraph{Scrum besprekingen} 
+De scrum bespreking vindt plaats elke dag voordat er begonnen wordt met werken. Deze kan gedaan worden via een chat client. Tijdens de scrum bespreking vertelt iedereen, wat hij de vorige werkdag zou doen, of dit allemaal gelukt is en wat hij deze werkdag gaat doen.
+
+Vervolgens vertelt de scrum master of dit in lijn is met de verwachting van de sprint. Het is de bedoeling dat een scrum bespreking niet meer dan 10 minuten in beslag neemt zodat iedereen snel aan het werk kan.
+Verantwoordelijkhedenverdeling
+De verantwoordelijkheden zijn binnen het project als volgt verdeeld:
+Scrum master: Joost
+Eindverantwoordelijk Javascript: Martijn
+Eindverantwoordelijk Haskell: Pim en Lennart
+Eindverantwoordelijk usability: Thijs
+Notulist: Pim
+De eindverantwoordelijkheid voor usability betekent dat Thijs ervoor verantwoordelijk is dat het uiteindelijke systeem eenvoudig te gebruiken is voor de student. Joost zal als scrum master taken uit de verschillende hoeken van het project oppakken. 
+
+\paragraph{Trello}
+Een scrum board is een belangrijk onderdeel van scrum. Op dit bord staat namelijk het project backlog, sprint backlog en de voortgang van de huidige sprint. Hiervoor gaan we gebruik maken van een eenvoudige online tool genaamd Trello.
+
+GitHub issues kunnen eenvoudig gekoppeld worden aan Trello. Hiermee kunnen bijvoorbeeld nieuw aangemaakte Issues automatisch in het project backlog verschijnen.
+
+\paragraph{Terugkoppeling naar de opdrachtgever}
+
+\subsection{Versiebeheer}
+Er is al een keuze gemaakt in de tooling die we willen gebruiken voor zowel project management als software ontwikkeling. Er zijn verschillende aspecten van het project die baat hebben bij tooling.
+
+Versie beheer is belangrijk zodat iedereen altijd kan werken met de laatste versie, er geen code verloren gaat en we altijd terug kunnen vallen op een eerdere versie van de software die werkt. GitHub en Git zijn is versiebeheer software die gedistribueerd werkt, we zijn dus niet afhankelijk van een centrale server waar de repository op staat maar iedereen heeft zijn eigen repository en deze worden met elkaar in sync gehouden. GitHub heeft verder ondersteuning voor het bijhouden van issues, die vervolgens gekoppeld kunnen worden aan commits.
+\paragraph{GitHub en Pull Requests}
+\paragraph{CI en Travis}
+Dit continuous integration platform zorgt er voor dat bij elke commit naar de repository er een build gedaan wordt. Daarna kunnen tests worden gerunt. Hiermee kunnen wij er voor zorgen dat een commit naar de dev of master branch altijd werkt en alle tests slagen. Dit heeft als voordeel dat als iemand aan de slag gaat met een nieuwe feature of code van andere toevoegt aan zijn codebase dit altijd werkt. Natuurlijk is het dan ook belangrijk dat er voor alle code tests zijn geschreven.
+
